# blackbird

./: .gitignore  .pdm-python  blackbird.py  default.nix  flake.nix  pyproject.toml  pyproject.toml.6ahjfr0w  requirements.txt  result
blackbird/: __init__.py  main.py
tests/: test_core.py  test_export.py
