[project]
 authors = [
  { name = "Nikolai Schimke", email = "schimkeNikolai@gmail.com" }
 ]
 dependencies = [
  "Cython>=3.0.11",
  "Jinja2==3.1.4",
  "MarkupSafe==3.0.2",
  "Pygments==2.17.2",
  "aiohttp==3.9.3",
  "aiosignal==1.3.1",
  "annotated-types==0.7.0",
  "asyncio==3.4.3",
  "attrs==23.2.0",
  "beautifulsoup4==4.12.3",
  "blis==1.0.1",
  "catalogue==2.0.10",
  "certifi==2024.2.2",
  "chardet==5.2.0",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "cloudpathlib==0.20.0",
  "colorama==0.4.6",
  "confection==0.1.5",
  "cymem==2.0.10",
  "frozenlist==1.4.1",
  "greenlet==3.0.3",
  "idna==3.6",
  "langcodes==3.5.0",
  "language-data==1.3.0",
  "marisa-trie==1.2.1",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "multidict==6.0.5",
  "murmurhash==1.0.11",
  "numpy==2.0.2",
  "packaging==24.1",
  "pillow==10.2.0",
  "playwright==1.43.0",
  "preshed==3.0.9",
  "pydantic-core==2.27.1",
  "pydantic==2.10.1",
  "pyee==11.1.0",
  "python-dotenv==1.0.1",
  "reportlab==4.1.0",
  "requests==2.31.0",
  "rich==13.7.1",
  "shellingham==1.5.4",
  "smart-open==7.0.5",
  "soupsieve==2.6",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
  "spacy==3.8.2",
  "srsly==2.4.8",
  "tdqm==0.0.1",
  "thinc==8.3.2",
  "tqdm==4.67.0",
  "typer==0.13.1",
  "typing-extensions==4.12.2",
  "urllib3==2.2.0",
  "wasabi==1.1.3",
  "weasel==0.4.1",
  "wrapt==1.17.0",
  "yarl==1.9.4"
 ]
 description = "Default template for PDM package"
 license = { text = "MIT" }
 name = "blackbird"
 readme = "README.md"
 requires-python = "== 3.12.*"
 version = "0.1.0"

[build-system]
 build-backend = "setuptools.build_meta"
 requires      = ["setuptools"]

 [project.scripts]
  blackbird = "src.__init__:initiate"
